--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "Lua.diagnostics.globals": [
         "reaper",
-        "GUI"
+        "GUI",
+        "missing_lib",
+        "gfx"
     ]
 }
